# TradingBot

./: .clang-tidy  .dockerignore  .gitignore  AbstractOrderManager_8h_source.html  AdaptiveParams_8h_source.html  Arbitrage_8h_source.html  ArimaGarchAdaptive_8h_source.html  ArimaModel_8h_source.html  BayesianSignalFiltering_8h_source.html  Bellman__Ford_8h_source.html  BinanceAPI_8h_source.html  BinanceOrderManager_8h_source.html  BinanceScalping_8h_source.html  CMakeLists.txt  CSVLogger_8h_source.html  Common_8h_source.html  DataCollector_8h_source.html  Dockerfile.backtesting  Dockerfile.test  ExchangeAPI_8h_source.html  GarchModel_8h_source.html  Graph_8h_source.html  KrakenAPI_8h_source.html  KrakenOrderManager_8h_source.html  LiveBinanceScalpingCurrency_8h_source.html  LiveBinanceScalping_8h_source.html  Logger_8h_source.html  MathStatistics_8h_source.html  MeanReverseStr_8h_source.html  OKXAPI_8h_source.html  OKXOrderManager_8h_source.html  README.md  ScalpingStr_8h_source.html  TradingMethods_8h_source.html  TradingServer_8h_source.html  TradingStrategy_8h_source.html  _config.yml  annotated.html  arima__garch__adaptive__backtesting_8h_source.html  bayes__filtering__backtesting_8h_source.html  (+328 more)
Autotests/: CMakeLists.txt  test_databaseWrapper.cpp  test_databaseWrapper.h
Autotests/include/: test_BellmanFord.h  test_databaseWrapper.h  test_tradingEngine.h
Autotests/src/: Run_all_tests.cpp  test_BellmanFord.cpp  test_databaseWrapper.cpp  test_tradingEngine.cpp
Backtesting/: CMakeLists.txt  binance_stats.py  run_backtesting.cpp  scalping_backtesting.cpp  scalping_metrics.py
Backtesting/Common/: usable_metrics.py
Backtesting/data/arima_garch/: 2020_BTCUSDT-5m-2020-01.csv  2020_BTCUSDT-5m-2020-02.csv  2020_BTCUSDT-5m-2020-03.csv  2020_BTCUSDT-5m-2020-04.csv  2020_BTCUSDT-5m-2020-05.csv  2020_BTCUSDT-5m-2020-06.csv  2020_BTCUSDT-5m-2020-07.csv  2020_BTCUSDT-5m-2020-08.csv  2020_BTCUSDT-5m-2020-09.csv  2020_BTCUSDT-5m-2020-10.csv  2020_BTCUSDT-5m-2020-11.csv  2020_BTCUSDT-5m-2020-12.csv  2021_BTCUSDT-5m-2021-02.csv  2021_BTCUSDT-5m-2021-03.csv  2021_BTCUSDT-5m-2021-04.csv  2021_BTCUSDT-5m-2021-05.csv  2021_BTCUSDT-5m-2021-06.csv  2021_BTCUSDT-5m-2021-07.csv  2021_BTCUSDT-5m-2021-08.csv  2021_BTCUSDT-5m-2021-09.csv  2021_BTCUSDT-5m-2021-10.csv  2021_BTCUSDT-5m-2021-12.csv  2022_BTCUSDT-5m-2022-01.csv  2022_BTCUSDT-5m-2022-02.csv  2022_BTCUSDT-5m-2022-03.csv  2022_BTCUSDT-5m-2022-04.csv  2022_BTCUSDT-5m-2022-05.csv  2022_BTCUSDT-5m-2022-06.csv  2022_BTCUSDT-5m-2022-07.csv  2022_BTCUSDT-5m-2022-08.csv  2022_BTCUSDT-5m-2022-09.csv  2022_BTCUSDT-5m-2022-10.csv  2022_BTCUSDT-5m-2022-11.csv  2022_BTCUSDT-5m-2022-12.csv  2023_BTCUSDT-5m-2023-06.csv  2023_BTCUSDT-5m-2023-07.csv  2023_BTCUSDT-5m-2023-08.csv  2023_BTCUSDT-5m-2023-09.csv  2023_BTCUSDT-5m-2023-10.csv  2023_BTCUSDT-5m-2023-11.csv  (+12 more)
Backtesting/data/bayesian/: 2020.csv  2021.csv  2022.csv  2023.csv  2024.csv
Backtesting/data/mean_reversion/: 2020.csv  2021.csv  2022.csv  2023.csv  2024.csv
Backtesting/include/: arima_garch_adaptive_backtesting.h  bayes_filtering_backtesting.h  mean_reverse_backtesting.h  scalping_backtesting.h
Backtesting/src/: arima_garch_adaptive_backtesting.cpp  bayes_filtering_backtesting.cpp  binance_stats.py  load_data_some_years.py  mean_reverse_backtesting.cpp  run_backtesting.cpp  scalping_backtesting.cpp  scalping_metrics.py  show_metrics.py
DataCollector/: CMakeLists.txt
DataCollector/include/: DataCollector.h
DataCollector/src/: DataCollector.cpp
DatabaseWrapper/: CMakeLists.txt  DatabaseWrapper.cpp  DatabaseWrapper.h
StaticModels/: CMakeLists.txt
StaticModels/Common/include/: MathStatistics.h
StaticModels/ModelsMetrics/: results.md
StaticModels/include/: ArimaModel.h  GarchModel.h
StaticModels/src/: ArimaModel.cpp  GarchModel.cpp  main.cpp  plot.py
TradingEngine/: CMakeLists.txt  OrderManager.cpp  OrderManager.h  TradingServer.cpp  TradingServer.h
TradingEngine/Logs/: arima_garch_iovkirilin@gmail.com.csv  arima_garch_vanya246@inbox.ru.csv  bayesian_iovkirilin@gmail.com.csv  bayesian_vanya246@inbox.ru.csv  mean_reverse_iovkirilin@gmail.com.csv  mean_reverse_vanya246@inbox.ru.csv  scalping_iovkirilin@gmail.com.csv  scalping_vanya246@inbox.ru.csv
TradingEngine/include/: AbstractOrderManager.h  BinanceOrderManager.h  KrakenOrderManager.h  OKXOrderManager.h  OrderManager.h  TradingServer.h
TradingEngine/src/: AbstractOrderManager.cpp  BinanceOrderManager.cpp  KrakenOrderManager.cpp  OKXOrderManager.cpp  OrderManager.cpp  TradingServer.cpp
TradingStrategies/: Arbitrage.cpp  Arbitrage.h  Bellman_Ford.cpp  Bellman_Ford.h  BinanceScalping.cpp  BinanceScalping.h  CMakeLists.txt  Common.cpp  Common.h  StrategiesAPI.pc.in  get_all_currencies.py
TradingStrategies/ArimaGarchAdaptiveTrading/: CMakeLists.txt
TradingStrategies/ArimaGarchAdaptiveTrading/include/: ArimaGarchAdaptive.h
TradingStrategies/ArimaGarchAdaptiveTrading/src/: ArimaGarchAdaptive.cpp
TradingStrategies/BayesianSignalFiltering/: CMakeLists.txt
TradingStrategies/BayesianSignalFiltering/include/: BayesianSignalFiltering.h
TradingStrategies/BayesianSignalFiltering/src/: BayesianSignalFiltering.cpp
TradingStrategies/Common/: BinanceScalping.cpp  BinanceScalping.h  Common.h  TradingMethods.cpp  TradingMethods.h
TradingStrategies/Common/include/: AdaptiveParams.h  BinanceScalping.h  Common.h  Graph.h  TradingMethods.h  TradingStrategy.h
TradingStrategies/Common/src/: BinanceScalping.cpp  (+4 more)
TradingStrategies/InterExchangeArbitration/: CMakeLists.txt  FetchData.cpp  FetchData.h
TradingStrategies/IntraExchangeArbitration/: Arbitrage.cpp  Arbitrage.h  Bellman_Ford.cpp  Bellman_Ford.h  BinanceScalping.cpp  BinanceScalping.h  CMakeLists.txt  LiveBinanceScalping.cpp  LiveBinanceScalping.h
TradingStrategies/MeanReversionStrategy/: CMakeLists.txt
TradingStrategies/Scalping/: CMakeLists.txt  LiveBinanceScalpingCurrency.cpp  LiveBinanceScalpingCurrency.h  ScalpingStr.cpp  ScalpingStr.h  main.cpp
TradingStrategies/include/: strategies_api.cpp  strategies_api.h
test_app/: CMakeLists.txt  main.cpp
(+73 files in other folders)
